Build the cppunit test for AcsDaemonUtils
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190250 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
@@ -52,11 +52,14 @@
 #
 # C programs (public and local)
 # -----------------------------
-EXECUTABLES     = acsServices80Test
-EXECUTABLES_L   = 
+EXECUTABLES     = acsServices80Test 
+EXECUTABLES_L   = testAcsDaemonUtil
 
 acsServices80Test_OBJECTS   =   acsServices80Test
 acsServices80Test_LIBS      =   acscomponentStubs acsdaemonErrType acsdaemonStubs acserr maciErrType ACSErrTypeCommon
+
+testAcsDaemonUtil_OBJECTS   =  testAcsDaemonUtil ../src/acsDaemonUtils
+testAcsDaemonUtil_LIBS      =  acsutil cppunit ACE
 
 #
 # <brief description of xxxxx program>
