COMP-9260: backport of "NotifyEventChannelFactory" suffix handling
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/branches/ACS-10_2-B/ACS@190307 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsstartup/test/Makefile
+++ b/LGPL/CommonSoftware/acsstartup/test/Makefile
@@ -74,7 +74,7 @@ SCRIPTS_L       = acsstartupTATPrologue acsstartupTATEpilogue \
 	maciManagerJ cdbjDAL loggingService acsLogSvc ACSStartContainerPy maciContainer  \
 	maciManagerShutdown maciContainerShutdown acsStartJavaContainer \
 	testContainerPort.sh acsstartupTestLoadIFR.sh heapDumpOnOutOfMemoryErrorTest \
-	testVmOption.sh 
+	testVmOption.sh acsstartupTest_nslist
 #
 # TCL scripts (public and local)
 # ------------------------------
