--- a/LGPL/CommonSoftware/acsGUIs/alarmPanel/.classpath
+++ b/LGPL/CommonSoftware/acsGUIs/alarmPanel/.classpath
@@ -11,5 +11,12 @@
 	<classpathentry kind="var" path="ACSROOT/lib/jms.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjms.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsGUIutil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/lasercore.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/laserclient.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmService.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
