COMP-8312: Added one test to test the synchronous options from acsdaemonStartContainer and acsdaemonStopContainer. Updated the test CDB. These tests can be run on a machine where CASA is not installed. A dummy acsStartContainerWithCASA script is used for this purpose.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190865 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsdaemon/ws/test/Makefile
@@ -90,7 +90,8 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       = acsdaemonTATPrologue acsdaemonTATEpilogue test.sh loglevel.sh
+SCRIPTS_L       = 	acsdaemonTATPrologue acsdaemonTATEpilogue test.sh loglevel.sh testSync.sh \
+			acsStartContainerWithCASA
 
 #
 # TCL scripts (public and local)
