Fixed problem with acsncCDBProperties::getCDB() static method that was not working for processes using the SimpleClient. Problem identified in COMP-9338 (ICT-577)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190983 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/src/Makefile
@@ -64,7 +64,7 @@ acsnc_OBJECTS  = acsncCDBProperties \
                  acsncServiceChecker acsncReconnectionCallback \
                  acsncCircularQueue
 
-acsnc_LIBS     = pthread rt ACSErrTypeCommon acsncStubs acsncErrType AcsNCTraceLogLTS logging RepeatGuard acstime maci basenc TAO_CosNotification_MC_Ext
+acsnc_LIBS     = pthread rt ACSErrTypeCommon acsncStubs acsncErrType AcsNCTraceLogLTS logging RepeatGuard acstime maci maciClient basenc TAO_CosNotification_MC_Ext
 
 acsncServiceChecker_OBJECTS = acsncServiceCheckerExec
 acsncServiceChecker_LIBS = acsnc maciClient
