svnToChangeLog creates 2 twiki pages starting from a XML log file generated by SVN - one with the changes by user - one with the ChangeLog
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@191362 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/test/Makefile
+++ b/LGPL/acsBUILD/test/Makefile
@@ -93,13 +93,13 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         =
+PY_SCRIPTS         = svnToChangeLog
 PY_SCRIPTS_L       =
 
 PY_MODULES         =
 PY_MODULES_L       =
 
-PY_PACKAGES        =
+PY_PACKAGES        = SvnLogToChangeLog
 PY_PACKAGES_L      =
 pppppp_MODULES	   =
 
