nosetestLauncher.sh avoids a dependency with ACS version in TestList.lite where  nosetests was called with full path like "/alma/ACS-12.0/Python/bin/nosetests"
nosetestLauncher.sh instead gets the path of nosetests from $PYTHON_ROOT.

git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@191455 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/xmlpybind/test/Makefile
+++ b/LGPL/CommonSoftware/xmlpybind/test/Makefile
@@ -39,6 +39,8 @@
 PY_MODULES         =
 PY_MODULES_L       = test_generateXsdPythonBinding
 
+SCRIPTS_L = nosetestLauncher.sh
+
 #>>>>> END OF standard rules
 
 #
