Replaced acsnc.idl :: ALARMSYSTEM_DOMAIN_NAME with acscommon.idl :: ACS_NC_DOMAIN_ALARMSYSTEM in all of ACS code, as part of the cleanup done along with ICTJ:ICT-494. Also removed unused "typedef short domainNameValue" and "domainNameValue ALARMSYSTEM_DOMAIN_VAL" from acsnc.idl.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@191878 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/demo/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/demo/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/AcsAlarmSystem.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
