--- a/LGPL/CommonSoftware/ACSLaser/alarm-clients/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/alarm-clients/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
