- Preparation for ICT-980: Removed code from BlobberWorker that deals with the specifics of concrete monitor points.   It is now encapsulated in the new class MonitorPointExpert, which should become a plugin contributed from outside of ACS. - BlobData statistics uses apache commons math SummaryStatistics instead of home-brew solution. - Auto-reformatted some code that had gotten illegible for editors that do not use 8 spaces for a tab (from recent pmerino check-in).
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@192999 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/monblobber/.classpath
+++ b/LGPL/CommonSoftware/monitoring/monblobber/.classpath
@@ -35,5 +35,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsCallbacksSupport.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-math-2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
