The log message while installing user configuration and default CDB shows the value of the environment variable used instead of a hardcoded string.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@193225 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/src/Makefile
+++ b/LGPL/acsBUILD/src/Makefile
@@ -265,18 +265,18 @@ install_doc:
 	         chmod -R ug+rw $(VLTTOP)/man;
 
 install_config:
-	@echo " . . . installing user account configuration files ACSROOT/config"
+	@echo " . . . installing user account configuration files $(VLTTOP)/config"
 	-@gtar -cf - --exclude=".svn" -C ../config .acs  | gtar -xf - -C $(VLTTOP)/config; \
 	         chmod -R ug+rw $(VLTTOP)/config/.acs;
-	@echo " . . . copying rc.d configuration files for DHCP"
+	@echo " . . . copying rc.d configuration files for DHCP in $(VLTTOP)/config"
 	-@gtar -cf - --exclude=".svn" -C ../config rc.d  | gtar -xf - -C $(VLTTOP)/config; \
 	         chmod -R ug+rw $(VLTTOP)/config/rc.d;
 
 install_cdb:
-	@echo " . . . copying default CDB in ACSDATA"
+	@echo " . . . copying default CDB in $(ACSDATA)/config"
 	-@gtar -cf - --exclude=".svn" -C ../config defaultCDB  | gtar -xf - -C $(ACSDATA)/config; \
 	         chmod -R ug+rw $(ACSDATA)/config/defaultCDB;
-	@echo " . . . copying demo CDB in ACSDATA"
+	@echo " . . . copying demo CDB in $(ACSDATA)/config"
 	-@gtar -cf - --exclude=".svn" -C ../config demoCDB  | gtar -xf - -C $(ACSDATA)/config; \
 	         chmod -R ug+rw $(ACSDATA)/config/demoCDB;
 
