(1) ICTJ:ICT-497 - Encapsulated the decision of whether a multi-valued monitor point should be interpreted as   (a) a single ("unique") monitor point with multiple values or   (b) a multiplexed representation of multiple logical monitor points (with a single value each)   behind an interface that the upper blobber layer retrieves from the new method BlobberPlugin#getMonitorPointExpert().   The MonitorPointExpert interface defines the method isMultivaluedMonitorPoint(String propertyName).   - This fixes the broken layer structure of the ACS part of the blobber.   - However, an overall better strategy may be to add a flag isMultivaluedMonitorPoint to the IDL blob struct and     transmit this information from the monitor collector to the blobber, instead of forcing the blobber to retrieve it from a plugin. - Moved ACSMonitorPointNameResolver (and some other 6 supporting classes that Patricio Merino had added) from the monblobber module   to ARCHIVE/TMCDB/DAO, package alma.acs.monitoring.blobber.mpexpert. Moved along the MonitorPointExpert class that was   extracted from BlobberWorker code before, now called MonitorPointExpertImpl.   - It does not yet fix the problem that this code uses xml files from ICD, which are not available for ARCHIVE either.   - Same issue with the binding classes that should be generated on the fly from ICD schemas but are now checked in.   - Retrieving the information from the TMCDB instead of the xml files would solve these problems. - Moved the recently added tests from MonitorBlobberUnitTest to CorbaAnyExtractionTest which is set up to test the code directly,   without going through the full blobber data path. - Fixed the tests that were broken by the "unique MP" changes:   - Some of the new tests were just copied-and-pasted and could never have worked. Fixed them to actually do the intended testing.   - Some of the old and new tests were broken because the "isUnique" check required the xml files from ICD to be present,     which they are n

--- a/LGPL/CommonSoftware/monitoring/monblobber/.classpath
+++ b/LGPL/CommonSoftware/monitoring/monblobber/.classpath
@@ -15,7 +15,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsASsources.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeAlarmSourceFactory.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/MonitoringDAO_IF.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/MonitorCollector.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/TMCDBCOMMON_IDL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar"/>
@@ -36,5 +35,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-math-2.1.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
