Update after ICT-497 changes.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@193239 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncontroller/.classpath
+++ b/LGPL/CommonSoftware/monitoring/moncontroller/.classpath
@@ -28,5 +28,9 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/MonitorErr.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maci.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/systementities.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
