abeans moved into acsGUIs
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@193911 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/Makefile
+++ b/LGPL/CommonSoftware/acsGUIs/Makefile
@@ -25,6 +25,7 @@ os     = $(shell uname)
 #
 MODULES_ACSGUIS  = 	acsGUIutil \
                     acsEclipseUtils \
+			abeans \
                     acssampGUI \
                     cdbBrowser \
                     errorBrowser \
