Initial commit of buildRelease a script to build ACS (and optionally ARCHIVE) for a release. In this preliminary version ARCHIVE is ignored.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@194048 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/acsBUILD/test/Makefile
+++ b/LGPL/acsBUILD/test/Makefile
@@ -93,7 +93,7 @@ TCL_SCRIPTS_L   =
 #
 # Python stuff (public and local)
 # ----------------------------
-PY_SCRIPTS         = svnToChangeLog createExtProdTar
+PY_SCRIPTS         = svnToChangeLog createExtProdTar createAcsRootTar buildRelease
 PY_SCRIPTS_L       =
 
 PY_MODULES         =
