Replaced ARCHIVE/Database/lib/resolver-20030708.jar with ACS/LGPL/Tools/extjars/lib/commons-xml-resolver-1.2.jar. This makes the resolver classes available for the build of ACS/LGPL/Tools/xercesj (see ICTJ:ICT-1178), and also means an overdue resolver version upgrade from 1.0 (2003) to 1.2 (2006-11). Note that the xercesj build was using a local resolver 1.2 copy that was then not available at runtime. Jar file details: Source code and jar downloaded from http://archive.apache.org/dist/xml/commons/, then added .java sources to the jar and renamed it from "resolver.jar" to "commons-xml-resolver-1.2.jar".
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@194464 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/extjars/.classpath
+++ b/LGPL/Tools/extjars/.classpath
@@ -15,7 +15,6 @@
 	<classpathentry kind="lib" path="lib/jlibeps-0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jnlp.jar"/>
 	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/logkit.jar"/>
 	<classpathentry kind="lib" path="lib/openorb_tools-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/openorb-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/openorb13Debug.jar"/>
@@ -44,5 +43,6 @@
 	<classpathentry kind="lib" path="lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/mockito-core-1.9.5.jar"/>
 	<classpathentry kind="lib" path="lib/objenesis-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-xml-resolver-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
