ICT-728: Fixed problem with logging in standalone application when some directories are missing
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@194831 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/logging/ws/test/Makefile
+++ b/LGPL/CommonSoftware/logging/ws/test/Makefile
@@ -119,7 +119,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       =  testACS_LOG_STDOUT
+SCRIPTS_L       =  testACS_LOG_STDOUT testLocalCache
 
 #
 # TCL scripts (public and local)
